# JotIt

./: Cargo.toml
shaders/: canvas_visualizer.wgsl  path_frag.wgsl  path_vert.wgsl
src/: canvas_component.rs  hermite_modify_component.rs  main.rs
